# filedgr-nft-protobuf-python

./: .gitignore  Makefile  requirements.txt  setup.cfg
.github/workflows/: ci.yml
proto/: filedgr_nft.proto
src/filedgr_nft_protobuf/: deserialize.py  serialize.py
src/filedgr_nft_protobuf/exceptions/: custom_exceptions.py
tests/: test_deserialize.py  test_serialize.py
