[metadata]
name=filedgr_nft_protobuf
version="0.0.1"
description="Serialization/Deserialization package for Filedgr NFTs"
long_description=file: README.md
classifiers=
    Programming Language :: Python :: 3

[options]
zip_safe=True
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
install_requires =
    protobuf>=4.21.9

[options.packages.find]
where=src
exclude =
    tests*

[flake8]
max-line-length = 120
ignore = E501
per-file-ignores =
    __init__.py:F401
max-complexity = 10